--- a/frontend/pages/seguros.html
+++ b/frontend/pages/seguros.html
@@ -42,60 +42,62 @@
             </div>
 
             <!-- Tabla de seguros -->
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Jugador</th>
-                        <th>Nº Póliza</th>
-                        <th>Aseguradora</th>
-                        <th>Tipo Cobertura</th>
-                        <th>Vigencia</th>
-                        <th>Estado</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><strong>Juan Pérez García</strong></td>
-                        <td>POL-2025-001</td>
-                        <td>Mapfre Deportes</td>
-                        <td>Completa</td>
-                        <td>Hasta 30/06/2025</td>
-                        <td><span class="badge badge-success">Vigente</span></td>
-                        <td>
-                            <button class="btn btn-small btn-info" onclick="verDetalles(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
-                            <button class="btn btn-small btn-warning" onclick="editarSeguro(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
-                            <button class="btn btn-small btn-danger" onclick="eliminarSeguro(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><strong>Carlos Ruiz López</strong></td>
-                        <td>POL-2025-002</td>
-                        <td>Axa Seguros</td>
-                        <td>Completa</td>
-                        <td>Hasta 30/06/2025</td>
-                        <td><span class="badge badge-success">Vigente</span></td>
-                        <td>
-                            <button class="btn btn-small btn-info" onclick="verDetalles(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
-                            <button class="btn btn-small btn-warning" onclick="editarSeguro(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
-                            <button class="btn btn-small btn-danger" onclick="eliminarSeguro(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><strong>Miguel Sánchez Romero</strong></td>
-                        <td>POL-2025-003</td>
-                        <td>Generali</td>
-                        <td>Básica</td>
-                        <td>Hasta 31/12/2024</td>
-                        <td><span class="badge badge-warning">Vence próximo</span></td>
-                        <td>
-                            <button class="btn btn-small btn-info" onclick="verDetalles(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
-                            <button class="btn btn-small btn-warning" onclick="editarSeguro(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
-                            <button class="btn btn-small btn-danger" onclick="eliminarSeguro(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-container">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Jugador</th>
+                            <th>Nº Póliza</th>
+                            <th>Aseguradora</th>
+                            <th>Tipo Cobertura</th>
+                            <th>Vigencia</th>
+                            <th>Estado</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><strong>Juan Pérez García</strong></td>
+                            <td>POL-2025-001</td>
+                            <td>Mapfre Deportes</td>
+                            <td>Completa</td>
+                            <td>Hasta 30/06/2025</td>
+                            <td><span class="badge badge-success">Vigente</span></td>
+                            <td>
+                                <button class="btn-icon" title="Ver"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                                <button class="btn-icon" title="Editar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                                <button class="btn-icon" title="Eliminar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Carlos Ruiz López</strong></td>
+                            <td>POL-2025-002</td>
+                            <td>Axa Seguros</td>
+                            <td>Completa</td>
+                            <td>Hasta 30/06/2025</td>
+                            <td><span class="badge badge-success">Vigente</span></td>
+                            <td>
+                                <button class="btn-icon" title="Ver"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                                <button class="btn-icon" title="Editar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                                <button class="btn-icon" title="Eliminar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Miguel Sánchez Romero</strong></td>
+                            <td>POL-2025-003</td>
+                            <td>Generali</td>
+                            <td>Básica</td>
+                            <td>Hasta 31/12/2024</td>
+                            <td><span class="badge badge-warning">Vence próximo</span></td>
+                            <td>
+                                <button class="btn-icon" title="Ver"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                                <button class="btn-icon" title="Editar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                                <button class="btn-icon" title="Eliminar"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <div class="table-info">
                 <p>Total seguros registrados: <strong>3</strong> | Vigentes: <strong>2</strong> | Por renovar: <strong>1</strong></p>
